Fix to correctly handle overflow for code blocks (inside highlight)

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -349,6 +349,7 @@ strong code {
   font-size: .88em
 }
 
+.post-content>.highlight>pre,
 .post-content>pre {
   display: grid;
 }
